2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.01  Stable version.
	* configure.ac: Bump version.
	* fread.c:
	Modify heuristic detection of page number types
	for ambiguous ones between roman number and alphabet.
	* tests/upmendex.test, tests/pprec[567].ist,
	tests/romalp[ABCD].idx, tests/romalpA-[56].ind,
	tests/romalp[BD]-[567].ind, tests/romalpC-5.ind, Makefile.am:
	Update tests.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-03-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* fwrite.c: output to file instead of accumulating too much.
	https://github.com/texjporg/tex-jp-build/issues/137

2022-01-18  Karl Berry  <karl@freefriends.org>

	* COPYRIGHT,
	* main.c: 2022.

2021-11-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 1.00  Stable version.
	* configure.ac: Bump version.
	* {,ex}var.h, fwrite.c, styfile.c:
	Add options "script_preamble" and "script_postamble"
	in style file.
	* sort.c: Add Latin Extended-F and -G.
	Add U_FORMAT_CHAR to is_type_mark_or_punct().
	* mendex.h, var.h, convert.c, fwrite.c, sort.c, styfile.c:
	Supports Arabic, Hebrew scripts (experimental).
	* upmendex.ja.txt:
	Update document.

2021-10-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.60  Beta version.
	* configure.ac: Bump version.
	* Makefile.am, convert.c, fwrite.c, sort.c,
	{,ex}kana.h, ktable.h, mendex.h:
	Enhance procedure of classifying characters:
	Newly classifies by character type of
	General Category in Unicode Script Property.
	https://github.com/t-tk/upmendex-package/issues/8

2021-09-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fread.c:
	Modify heuristic detection of page number types.
	* tests/upmendex.test, tests/range.idx, tests/range[123].ind,
	tests/pprecB.idx, tests/pprec[34].ist, tests/pprecB-[034].ind:
	Update tests.

2021-09-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* fread.c, fwrite.c, sort.c, mendex.h, {,ex}var.h:
	Extend levels of page numbers from 3 to 10
	for compatibility with makeindex.