@@ -1,3 +1,10 @@
+2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* main.c:
+	Moved calls of KP_entry_filetype() after checking options.
+	This change prevents unwanted looking for texmf.cnf.
+	https://github.com/texjporg/tex-jp-build/pull/144
+
 2022-05-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version 1.01  Stable version.
